2008-02-15  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/driver/ipmi-ssif-driver.c
	(_ipmi_i2c_smbus_access): Support SSIF driver timeout.

	* libfreeipmi/src/driver/: Support driver timeout error codes.

	* libfreeipmi/src/driver/ipmi-openipmi-driver.c: Remove semaphore
	unused code code.

	* ipmimonitoring/src/libipmimonitoring/: Classify driver timeout
	as a system error.

2008-02-15  Albert Chu <chu11@llnl.gov>

	* bmc-info/src/bmc-info.c (display_get_device_id): Fix version
	output.
	
2008-02-15  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/interface/ipmi-lan-interface.c
	(ipmi_lan_recvfrom): Fix bug.
	
2008-01-29  Albert Chu <chu11@llnl.gov>

	* common/src/hostlist.h, common/src/hostlist.c: Update to newest
	library to fix warnings.

	* Variety of code cleanup and minor bug fixes based static code
	analyzer.

2008-01-28  Albert Chu <chu11@llnl.gov>

	* Minor bug fixes throughout.
	
2008-01-25  Albert Chu <chu11@llnl.gov>

	* pef-config/pef-config.8.pre.in: Add general text.
	
2008-01-24  Albert Chu <chu11@llnl.gov>

	* pef-config/src/pef-config-wrapper.h,
	pef-config/src/pef-config-wrapper.c: Remove useless files.

	* pef-config/src/: Adjust files appropriately.

	* pef-config/src/pef-config.c, bmc-config/src/bmc-config.c: Make
	function static.

	* common/src/tool-sdr-cache-common.c: Fix compile issue.  Re-work
	to work with NULL pstate.
	
2008-01-24  Albert Chu <chu11@llnl.gov>

	* pef-config/pef-config.8.pre.in: Add "GENERAL USE" section.  Fix
	some typos.

	* bmc-config/bmc-config.8.pre.in: Fix some typos.

	* pef-config/src/pef-config-argp.c: Fix doc typo.
	
2008-01-24  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/sdr-cache/ipmi-sdr-cache-create.c
	(ipmi_sdr_cache_create): Fix record count corner case.
	
2008-01-23  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-ignore-sdr-cache.man: New file.

	* common/src/tool-cmdline-common.h,
	common/src/tool-cmdline-common.c: Add --ignore-sdr-cache support.
