@@ -674,6 +674,9 @@ _ipmi_ssif_cmd_read(ipmi_ssif_ctx_t ctx,
 				  pkt_len)) < 0)
     goto cleanup;
   
+  if (!read_len)
+    SSIF_ERRNUM_SET_CLEANUP(IPMI_SSIF_CTX_ERR_SYSTEM_ERROR);
+
   SSIF_ERR_INTERNAL_ERROR_CLEANUP(!(unassemble_ipmi_kcs_pkt (pkt,
                                                              read_len,
                                                              obj_hdr,
