@@ -28,8 +28,7 @@ o Updated SDR output under verbose and very verbose output modes with:
   o Support more SDR record types for output.
   o Output more SDR record information in general.
 o SSIF Inband driver will timeout after a certain period of time.
-o Various other minor bug fixes, documentation fixes, and
-  enhancements.
+o Various other bug fixes, documentation fixes, and enhancements.
 
 For Developers
 --------------
@@ -48,6 +47,7 @@ o Packet names added to IPMI dump outputs in all tools for easier
   packet identification in debugging.
 o Support driver timeout error codes in all drivers and APIs.
 o SDR record dumping added into all tools.
+o Various other bug fixes and enhancements.
 
 0.5.3
 -----
